--- a/config.toml
+++ b/config.toml
@@ -570,7 +570,7 @@ ignoreErrors = ["error-remote-getjson"]
 # Permalinks config (https://gohugo.io/content-management/urls/#permalinks)
 [Permalinks]
   # posts = ":year/:month/:filename"
-  posts = ":filename"
+  posts = ":year/:month/:slug"
 
 # Privacy config (https://gohugo.io/about/hugo-and-gdpr/)
 [privacy]
