--- a/config.toml
+++ b/config.toml
@@ -381,7 +381,7 @@ ignoreErrors = ["error-remote-getjson"]
       [params.page.comment.disqus]
         enable = true
         # Disqus shortname to use Disqus in posts
-        shortname = "aozakis-note"
+        shortname = "aozaki-note"
       # Gitalk comment config (https://github.com/gitalk/gitalk)
       [params.page.comment.gitalk]
         enable = false
