--- a/config.toml
+++ b/config.toml
@@ -242,9 +242,9 @@ ignoreErrors = ["error-remote-getjson"]
   [params.footer]
     enable = true
     # Custom content (HTML format is supported)
-    custom = ''
+    custom = ""
     # whether to show Hugo and theme info
-    hugo = true
+    hugo = false
     # whether to show copyright info
     copyright = true
     # whether to show the author
