--- a/config.toml
+++ b/config.toml
@@ -283,7 +283,7 @@ ignoreErrors = ["error-remote-getjson"]
     # whether to enable twemoji
     twemoji = false
     # whether to enable lightgallery
-    lightgallery = false
+    lightgallery = true
     # whether to enable the ruby extended syntax
     ruby = true
     # whether to enable the fraction extended syntax
