--- a/config.toml
+++ b/config.toml
@@ -107,7 +107,7 @@ ignoreErrors = ["error-remote-getjson"]
         # 是否在搜索索引中使用基于 baseURL 的绝对路径
         absoluteURL = false
         [languages.zh-cn.params.search.algolia]
-          index = ""
+          index = "index.zh-cn"
           appID = "16KY5T6BBV"
           searchKey = "9330590d0ed904a87b53637690ed0c06"
       # 主页信息设置
