--- a/config.toml
+++ b/config.toml
@@ -67,7 +67,7 @@ ignoreErrors = ["error-remote-getjson"]
         pre = ""
         post = ""
         name = "Portfolio"
-        url = "/categories/portfolio/"
+        url = "/portfolio/"
         title = ""
         weight = 4
       [[languages.zh-cn.menu.main]]
