--- a/config.toml
+++ b/config.toml
@@ -388,23 +388,12 @@ ignoreErrors = ["error-remote-getjson"]
         api = 'https://comment.aozaki.cc/api/'
         admin = 'Aozaki'
         adminLabel = 'Author'
-      # Waline comment config (https://waline.js.org/)
-      # Waline 评论系统设置 (https://waline.js.org/)
+      # {{< version 0.2.0 >}} {{< link "https://waline.js.org/en/" "Waline" >}} comment config
       [params.page.comment.waline]
         enable = true
-        #js = "https://cdn.jsdelivr.net/npm/@waline/client@latest"
-        js = "https://cdn.jsdelivr.net/npm/@waline/client/dist/Waline.min.js"
-        meta = ['nick','mail','link']                           # 评论者相关属性
-        requiredFields = ['nick','mail']                        # 设置必填项，默认匿名
-        placeholder = "Please leave your comment ~"             # 评论框占位提示符
-        serverURL = "https://waline.aozaki.cc"	            		# Waline的服务端地址（必填） 
-        #imageHosting =                                         # 图床api，如果允许评论框上传图片
-        avatar = "retro"                                        # Gravatar头像
-        avatarCDN = "https://www.gravatar.com/avatar/"          # Gravatar头像CDN地址，不建议使用loli源
-        pageSize = 10                                           # 评论列表分页，每页条数
-        lang = "zh-CN"                                          # 多语言支持
-        visitor = true                                          # 文章访问量统计
-        highlight = true                                        # 代码高亮
+        serverURL = "https://waline.aozaki.cc/"
+        visitor = true
+        dark = 'auto'
       # Gitalk comment config (https://github.com/gitalk/gitalk)
       [params.page.comment.gitalk]
         enable = false
