--- a/assets/data/cdn/jsdelivr.yml
+++ b/assets/data/cdn/jsdelivr.yml
@@ -2,7 +2,7 @@ prefix:
   libFiles: https://cdn.jsdelivr.net/npm/
   # simple-icons@2.14.0 https://github.com/simple-icons/simple-icons
   simpleIcons: https://cdn.jsdelivr.net/npm/simple-icons@2.14.0/icons/
-  walineJS: https://cdn.jsdelivr.net/npm/@waline/client/dist/Waline.min.js
+  walineJS: https://cdn.jsdelivr.net/npm/@waline/client@1.3.4/dist/Waline.min.js
 libFiles:
   # normalize.css@8.0.1 https://github.com/necolas/normalize.css
   normalizeCSS: normalize.css@8.0.1/normalize.min.css
