--- a/assets/data/cdn/jsdelivr.yml
+++ b/assets/data/cdn/jsdelivr.yml
@@ -2,7 +2,6 @@ prefix:
   libFiles: https://cdn.jsdelivr.net/npm/
   # simple-icons@2.14.0 https://github.com/simple-icons/simple-icons
   simpleIcons: https://cdn.jsdelivr.net/npm/simple-icons@2.14.0/icons/
-  walineJS: https://cdn.jsdelivr.net/npm/@waline/client@1.3.4/dist/Waline.min.js
 libFiles:
   # normalize.css@8.0.1 https://github.com/necolas/normalize.css
   normalizeCSS: normalize.css@8.0.1/normalize.min.css
@@ -67,3 +66,4 @@ libFiles:
   cookieconsentJS: cookieconsent@3.1.1/build/cookieconsent.min.js
   # twikoo@1.4.3 https://github.com/imaegoo/twikoo
   twikooJS: twikoo@1.4.3/dist/twikoo.all.min.js
+  walineJS: '@waline/client/dist/Waline.min.js'
