--- a/config.toml
+++ b/config.toml
@@ -394,7 +394,7 @@ ignoreErrors = ["error-remote-getjson"]
         serverURL = "https://waline.aozaki.cc/"
         visitor = true
         dark = 'auto'
-        requiredMeta= ['nick', 'mail']
+        requiredFields = ['nick', 'mail']
       # Gitalk comment config (https://github.com/gitalk/gitalk)
       [params.page.comment.gitalk]
         enable = false
