--- a/config.toml
+++ b/config.toml
@@ -101,7 +101,7 @@ ignoreErrors = ["error-remote-getjson"]
       [languages.zh-cn.params.search]
         enable = true
         # 搜索引擎的类型 ("lunr", "algolia")
-        type = "lunr"
+        type = "algolia"
         # 文章内容最长索引长度
         contentLength = 4000
         # 搜索框的占位提示语
@@ -116,8 +116,8 @@ ignoreErrors = ["error-remote-getjson"]
         absoluteURL = false
         [languages.zh-cn.params.search.algolia]
           index = "index.zh-cn"
-          appID = "16KY5T6BBV"
-          searchKey = "9330590d0ed904a87b53637690ed0c06"
+          appID = "C2LUBP92XW"
+          searchKey = "b68f09a37c09a125a2c3e42e0fcc9351"
       # 主页信息设置
       [languages.zh-cn.params.home]
         # RSS 文章数目
