--- a/config.toml
+++ b/config.toml
@@ -99,7 +99,7 @@ ignoreErrors = ["error-remote-getjson"]
         tileColor = "#da532c"
       # 搜索配置
       [languages.zh-cn.params.search]
-        enable = true
+        enable = false
         # 搜索引擎的类型 ("lunr", "algolia")
         type = "lunr"
         # 文章内容最长索引长度
