--- a/config.toml
+++ b/config.toml
@@ -115,9 +115,9 @@ ignoreErrors = ["error-remote-getjson"]
         # 是否在搜索索引中使用基于 baseURL 的绝对路径
         absoluteURL = false
         [languages.zh-cn.params.search.algolia]
-          index = "index.zh-cn"
-          appID = "16KY5T6BBV"
-          searchKey = "9330590d0ed904a87b53637690ed0c06"
+          index = "aozaki-blog"
+          appID = "C2LUBP92XW"
+          searchKey = "b68f09a37c09a125a2c3e42e0fcc9351"
       # 主页信息设置
       [languages.zh-cn.params.home]
         # RSS 文章数目
