--- a/config.toml
+++ b/config.toml
@@ -99,9 +99,9 @@ ignoreErrors = ["error-remote-getjson"]
         tileColor = "#da532c"
       # 搜索配置
       [languages.zh-cn.params.search]
-        enable = false
+        enable = true
         # 搜索引擎的类型 ("lunr", "algolia")
-        type = "lunr"
+        type = "aloglia"
         # 文章内容最长索引长度
         contentLength = 4000
         # 搜索框的占位提示语
