--- a/assets/data/cdn/jsdelivr.yml
+++ b/assets/data/cdn/jsdelivr.yml
@@ -16,7 +16,7 @@ libFiles:
   # lunr.js@2.3.8 https://lunrjs.com/
   lunrJS: lunr@2.3.8/lunr.min.js
   # algoliasearch@4.2.0 https://github.com/algolia/algoliasearch-client-javascript
-  algoliasearchJS: algoliasearch@4.2.0/dist/algoliasearch-lite.umd.min.js
+  algoliasearchJS: algoliasearch/dist/algoliasearch.umd.min.js
   # lazysizes@5.2.2 https://github.com/aFarkas/lazysizes
   lazysizesJS: lazysizes@5.2.2/lazysizes.min.js
   # object-fit-images@3.2.4 https://github.com/fregante/object-fit-images
