--- a/config.toml
+++ b/config.toml
@@ -115,9 +115,9 @@ ignoreErrors = ["error-remote-getjson"]
         # 是否在搜索索引中使用基于 baseURL 的绝对路径
         absoluteURL = false
         [languages.zh-cn.params.search.algolia]
-          index = "netlify_0bcf1259-0fdb-45da-be64-a76dac743055_master_all"
-          appID = "SOHDCE4CMU"
-          searchKey = "4b3e15275a35387de0ac3f591435632e"
+          index = "aozaki-blog"
+          appID = "C2LUBP92XW"
+          searchKey = "b68f09a37c09a125a2c3e42e0fcc9351"
       # 主页信息设置
       [languages.zh-cn.params.home]
         # RSS 文章数目
