--- a/.imgbotconfig
+++ b/.imgbotconfig
@@ -1,6 +1,6 @@
 {
-    "schedule": "weekly", // daily|weekly|monthly
+    "schedule": "weekly",
     "ignoredFiles": [
-        "static/*", // ignore by folderpath
+        "static/*"
     ]
 }
