--- a/config.toml
+++ b/config.toml
@@ -281,7 +281,7 @@ ignoreErrors = ["error-remote-getjson"]
       name = "Aozaki's Note"
       # you can add extra information before the name (HTML format is supported), such as icons
       # 你可以在名称 (允许 HTML 格式) 之前添加其他信息, 例如图标
-      pre = "<i class='fas fa-book'></i>"
+      pre = ""
       # you can add extra information after the name (HTML format is supported), such as icons
       # 你可以在名称 (允许 HTML 格式) 之后添加其他信息, 例如图标
       post = ""
