--- a/config.toml
+++ b/config.toml
@@ -257,7 +257,7 @@ ignoreErrors = ["error-remote-getjson"]
   images = ["/media/logo.jpg"]
   # enable PWA
   # 开启 PWA 支持
-  enablePWA = false
+  enablePWA = true
   # Header config
   # 页面头部导航栏配置
   [params.header]
