twikoo to min.js

--- a/assets/data/cdn/jsdelivr.yml
+++ b/assets/data/cdn/jsdelivr.yml
@@ -65,7 +65,7 @@ libFiles:
   cookieconsentCSS: cookieconsent@3.1.1/build/cookieconsent.min.css
   cookieconsentJS: cookieconsent@3.1.1/build/cookieconsent.min.js
   # twikoo@1.4.3 https://twikoo.js.org/
-  twikooJS: twikoo@1.4.9/dist/twikoo.all.min.js
+  twikooJS: twikoo@1.4.9/dist/twikoo.min.js
   # fusejs@6.4.6 https://fusejs.io/
   fuseJS: fuse.js@6.4.6/dist/fuse.min.js
   # pjax@0.13.0 https://github.com/PaperStrike/Pjax
