--- a/assets/data/cdn/jsdelivr.yml
+++ b/assets/data/cdn/jsdelivr.yml
@@ -1,7 +1,7 @@
 prefix:
-  libFiles: https://cdn.jsdelivr.net/npm/
+  libFiles: https://unpkg.com/
   # simple-icons@5.8.1 https://github.com/simple-icons/simple-icons
-  simpleIcons: https://cdn.jsdelivr.net/npm/simple-icons@v5.8.1/icons/
+  simpleIcons: https://unpkg.com/simple-icons@v5.8.1/icons/
 libFiles:
   # normalize.css@8.0.1 https://github.com/necolas/normalize.css
   normalizeCSS: normalize.css@8.0.1/normalize.min.css
@@ -14,7 +14,7 @@ libFiles:
   # lunr.js@2.3.9 https://lunrjs.com/
   lunrJS: lunr@2.3.9/lunr.min.js
   # algoliasearch@4.10.3 https://github.com/algolia/algoliasearch-client-javascript
-  algoliasearchJS: algoliasearch@4.10.3/dist/algoliasearch.umd.min.js
+  algoliasearchJS: algoliasearch@4.11.0/dist/algoliasearch.umd.js
   # lazysizes@5.3.2 https://github.com/aFarkas/lazysizes
   lazysizesJS: lazysizes@5.3.2/lazysizes.min.js
   # object-fit-images@3.2.4 https://github.com/fregante/object-fit-images
