--- a/assets/data/cdn/jsdelivr.yml
+++ b/assets/data/cdn/jsdelivr.yml
@@ -65,7 +65,7 @@ libFiles:
   # twemoji@13.1.0 https://github.com/twitter/twemoji
   twemojiJS: twemoji@13.1.0/dist/twemoji.min.js
   # twikoo@1.4.10 https://github.com/imaegoo/twikoo
-  twikooJS: twikoo@1.4.14/dist/twikoo.all.min.js
+  twikooJS: twikoo@1.4.15/dist/twikoo.all.min.js
   # typeit@7.0.4 https://github.com/alexmacarthur/typeit
   typeitJS: typeit@7.0.4/dist/typeit.min.js
   # valine@1.4.16 https://github.com/xCss/Valine
@@ -81,3 +81,5 @@ libFiles:
   vssueCSS: vssue@1.4.8/dist/vssue.min.css
   # waline@1.5.2 https://github.com/walinejs/waline
   walineJS: "@waline/client@1.5.2/dist/Waline.min.js"
+  # tablesort@5.3.0 https://github.com/tristen/tablesort
+  tablesort: "tablesort@5.3.0/src/tablesort.min.js"
