--- a/assets/jsconfig.json
+++ b/assets/jsconfig.json
@@ -1,10 +1,8 @@
 {
- "compilerOptions": {
-  "baseUrl": ".",
-  "paths": {
-   "*": [
-    "../themes/DoIt/assets/*"
-   ]
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "*": ["../themes/DoIt/assets/*"]
+    }
   }
- }
 }
