link for homepage

--- a/config.toml
+++ b/config.toml
@@ -147,7 +147,7 @@ ignoreErrors = ["error-remote-getjson"]
           # 主页显示头像的 URL
           avatarURL = ""
           # 主页显示的网站标题 (支持 HTML 格式)
-          title = "<img src='media/logo_light.svg' />"
+          title = "<a href='/posts/' rel='noopener noreferrer'><img src='media/logo_light.svg' /></a>"
           # 主页显示的网站副标题
           subtitle = "Watch, read, write. It forges my soul."
           # 是否为副标题显示打字机动画
@@ -256,7 +256,7 @@ ignoreErrors = ["error-remote-getjson"]
   dateFormat = "2006-01-02"
   # website images for Open Graph and Twitter Cards
   # 网站图片, 用于 Open Graph 和 Twitter Cards
-  images = ["/twitter_card.jpg"]
+  images = ["/twitter-card.jpg"]
   # enable PWA
   # 开启 PWA 支持
   enablePWA = false
@@ -624,7 +624,7 @@ ignoreErrors = ["error-remote-getjson"]
     [params.page.seo]
       # image URL
       # 图片 URL
-      images = ["https://blog.aozaki.cc/media/logo.jpg"]
+      images = ["https://blog.aozaki.cc/twitter-card.jpg"]
       # Publisher info
       # 出版者信息
       [params.page.seo.publisher]
