--- a/assets/data/cdn/jsdelivr.yml
+++ b/assets/data/cdn/jsdelivr.yml
@@ -21,7 +21,7 @@ libFiles:
   echartsJS: echarts@5.2.2/dist/echarts.min.js
   echartsMacaronsJS: echarts@5.2.2/theme/macarons.min.js
   # fontawesome-free@5.15.4 https://github.com/FortAwesome/Font-Awesome
-  fontawesomeFreeCSS: "@fortawesome/fontawesome-free@5.15.4/css/all.min.css"
+  fontawesomeFreeCSS: '@fortawesome/fontawesome-free@5.15.4/css/all.min.css'
   # fusejs@6.4.6 https://github.com/krisk/fuse
   fuseJS: fuse.js@6.4.6/dist/fuse.min.js
   # gitalk@1.7.2 https://github.com/gitalk/gitalk
@@ -65,7 +65,7 @@ libFiles:
   # twemoji@13.1.0 https://github.com/twitter/twemoji
   twemojiJS: twemoji@13.1.0/dist/twemoji.min.js
   # twikoo@1.4.10 https://github.com/imaegoo/twikoo
-  twikooJS: twikoo@1.4.15/dist/twikoo.all.min.js
+  twikooJS: twikoo@1.6.7/dist/twikoo.all.min.js
   # typeit@7.0.4 https://github.com/alexmacarthur/typeit
   typeitJS: typeit@7.0.4/dist/typeit.min.js
   # valine@1.4.16 https://github.com/xCss/Valine
@@ -79,7 +79,8 @@ libFiles:
   vssueGithubJS: vssue@1.4.8/dist/vssue.github.min.js
   vssueGitlabJS: vssue@1.4.8/dist/vssue.gitlab.min.js
   vssueCSS: vssue@1.4.8/dist/vssue.min.css
-  # waline@1.5.2 https://github.com/walinejs/waline
-  walineJS: "@waline/client@1.5.2/dist/Waline.min.js"
+  # waline@2.3.2 https://github.com/walinejs/waline
+  walineJS: "@waline/client@2.3.2/dist/waline.js"
+  walineCSS: "@waline/client@2.3.2/dist/waline.css"
   # tablesort@5.3.0 https://github.com/tristen/tablesort
   tablesort: "tablesort@5.3.0/src/tablesort.min.js"
