--- a/config.toml
+++ b/config.toml
@@ -785,7 +785,7 @@ ignoreErrors = ["error-remote-getjson"]
 # Permalinks 配置 (https://gohugo.io/content-management/urls/#permalinks)
 [Permalinks]
   # posts = ":year/:month/:filename"
-  posts = "posts/:slug"
+  posts = ":slug"
 
 # Privacy config (https://gohugo.io/about/hugo-and-gdpr/)
 # 隐私信息配置 (https://gohugo.io/about/hugo-and-gdpr/)
