fix dup pic in about

--- a/config.toml
+++ b/config.toml
@@ -170,7 +170,7 @@ ignoreErrors = ["error-remote-getjson"]
         Twitter = "Aozaki__"
         Instagram = ""
         Facebook = ""
-        Telegram = ""
+        Telegram = "aozaki_kuro"
         Medium = ""
         Gitlab = ""
         Youtubelegacy = ""
