--- a/config.toml
+++ b/config.toml
@@ -229,7 +229,7 @@ ignoreErrors = ["error-remote-getjson"]
         Bilibili = ""
         ORCID = ""
         Liberapay = ""
-        Ko-Fi = "Project_Stargazer"
+        Ko-Fi = "aozaki"
         BuyMeACoffee = ""
         Linktree = ""
         QQ = ""
