--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.2.0",
   "private": true,
   "scripts": {
-    "start": "hugo server -D",
+    "dev": "hugo server -D",
     "build": "hugo",
     "clean": "rm -rf ./public",
     "algolia": "atomic-algolia",
