--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "hugo",
     "clean": "rm -rf ./public",
     "algolia": "atomic-algolia",
-    "format": "prettier './**/*.+(js|jsx|ts|tsx|json|css|md|mdx)' --write"
+    "format": "prettier './**/**/*.+(js|jsx|ts|tsx|json|css|md|mdx|yml|scss)' --write"
   },
   "dependencies": {
     "atomic-algolia": "^0.3.19",
