--- a/assets/data/cdn/jsdelivr.yml
+++ b/assets/data/cdn/jsdelivr.yml
@@ -84,3 +84,5 @@ libFiles:
   walineCSS: '@waline/client@2.3.2/dist/waline.css'
   # tablesort@5.3.0 https://github.com/tristen/tablesort
   tablesort: 'tablesort@5.3.0/src/tablesort.min.js'
+  disqusjsCSS: disqusjs@1.3/dist/disqusjs.css
+  disqusjsJS: disqusjs@1.3/dist/disqus.js
