--- a/config.toml
+++ b/config.toml
@@ -179,7 +179,7 @@ ignoreErrors = ["error-remote-getjson"]
         Twitter = "Aozaki__"
         Instagram = ""
         Facebook = ""
-        Telegram = "aozaki_kuro"
+        Telegram = "aozaki_ch"
         Medium = ""
         Gitlab = ""
         Youtubelegacy = ""
